# CRATER_GRADER

./: .gitattributes  .gitignore  .gitmodules  README.md  docker-compose.yml  environment.yml  requirements.txt  test.txt
cg_ws/src/arduino/: CMakeLists.txt  README.md  package.xml
cg_ws/src/arduino/actuator_interface/: actuator_interface.ino
cg_ws/src/arduino/auto_connect_actuator_interface/: auto_connect_actuator_interface.ino
cg_ws/src/arduino/config/: device_params.yaml  diagnostic_params.yaml  scale_offset_params.yaml
cg_ws/src/arduino/micro-ros_reconnection_example/: micro-ros_reconnection_example.ino
cg_ws/src/arduino/src/: serial_interface_main.cpp  serial_interface_node.cpp
cg_ws/src/cg_msgs/: CMakeLists.txt  package.xml
cg_ws/src/cg_msgs/msg/: ActuatorCommand.idl  ActuatorState.idl  ArduinoFeedback.idl  BeaconMultiTag.idl  BeaconTag.idl  EncoderTelemetry.idl  MuxMode.idl  Point2D.idl  Pose2D.idl  SiteMap.idl  Slip.idl  Trajectory.idl
cg_ws/src/cg_msgs/srv/: EnableWorksystem.srv  SaveMap.srv  SiteMap.srv  UpdateTrajectory.srv
cg_ws/src/cg_visualization/: CMakeLists.txt  package.xml
cg_ws/src/cg_visualization/config/: crater_loc_test.rviz  mapping_debug.rviz  marker_viz_params.yaml  planning_debug.rviz  planning_debug_with_tool.rviz  svd.rviz  svd_depthcam.rviz  svd_encore_depthcam.rviz  svd_encore_main.rviz  svd_encore_main_orbit_view.rviz  svd_encore_main_topdown_view.rviz  svd_encore_plot_juggler.xml  svd_main.rviz  svd_plot_juggler.xml  svd_plot_juggler_2.xml  svd_suncam.rviz  yaw_debug.rviz
cg_ws/src/cg_visualization/launch/: viz_launch.py
cg_ws/src/cg_visualization/meshes/: 600220.STL
cg_ws/src/cg_visualization/src/: marker_viz_main.cpp  marker_viz_node.cpp
cg_ws/src/cg_visualization/urdf/: 600220.urdf
cg_ws/src/drivers/bearing/: CMakeLists.txt  package.xml
cg_ws/src/drivers/imu/: CMakeLists.txt  package.xml
cg_ws/src/drivers/total_station/: package.xml  setup.cfg  setup.py
cg_ws/src/localization/: CMakeLists.txt  package.xml
cg_ws/src/localization/config/: ekf_global_2d.yaml  ekf_global_node_params.yaml  ekf_odom_2d.yaml  ekf_odom_node_params.yaml  ekf_slip_node_params.yaml  prism_transform_params.yaml  slip_estimate_params.yaml  slip_params.yaml
cg_ws/src/localization/include/: slip_estimate.hpp
cg_ws/src/localization/launch/: ekf_localization.launch.py  slip_estimate_launch.py
cg_ws/src/localization/src/: beacon_transformer.cpp  beacon_transformer_main.cpp  kalman_filter_linear.cpp  slip_estimate.cpp  slip_estimate_main.cpp  slip_estimate_node.cpp  ts_prism_transformer.cpp  ts_prism_transformer_main.cpp
cg_ws/src/mapping/: CMakeLists.txt  package.xml
cg_ws/src/mapping/config/: point_cloud_registration_params.yaml  site_map_params.yaml  terrain_filtering_params.yaml
cg_ws/src/mapping/launch/: mapping_launch.py
cg_ws/src/mapping/saved_maps/: 20221119_run02_exploration.csv  20221119_run03_final.csv  20221119_run03_transport04.csv  20221119_run03_transport07.csv  auton_transition.csv  autonomous_mapping.csv  cg_craters_50x50_map.csv  cmu_craters_blurred_map.csv  cmu_craters_blurred_touchup_map.csv  cmu_craters_map.csv  cmu_craters_smoothed_map.csv  cmu_launchpad_150x150_map.csv  craters_150x150_map.csv  craters_150x150_v2_map.csv  donut_exploration.csv  end_of_run_20221115.csv  exploration_map_check_test.csv  full_exploration.csv  fvd_exploration.csv  fvd_post.csv  half_auton_half_manual_exploration.csv  lookahead_steer_map.csv  map001.csv  map001_3x3.csv  map001_5x5.csv  map001_9x9.csv  max_map.csv  normal_map.csv  normal_map_windows.csv  nov_11_crater.csv  pipeline_transport.csv  red_demo.csv  run001_final_map_20221115.csv  run001_transport002_20221115.csv  run001_transport004_20221115.csv  run001_transport006_20221115.csv  run001_transport008_20221115.csv  run001_transport012_20221115.csv  run002_pr10.csv  run003_transport004_20221116.csv  (+12 more)
cg_ws/src/mapping/src/: cell_bayes.cpp  cell_buffer.cpp  map.cpp  map_util.cpp  point_cloud_registration_main.cpp  point_cloud_registration_main_but_fancier.cpp  point_cloud_registration_node.cpp  point_cloud_registration_node_but_fancier.cpp  site_map.cpp  site_map_main.cpp  site_map_node.cpp  terrain_filtering_main.cpp  terrain_filtering_node.cpp
cg_ws/src/mapping/test/: 50x50_zeros_height_map.csv  map_test.cpp  site_map_test.cpp
cg_ws/src/motion_control/: CMakeLists.txt  package.xml
cg_ws/src/motion_control/config/: cmdmux_node_params.yaml  diagnostic_params.yaml  odom_node_params.yaml  worksystem_control_params.yaml
cg_ws/src/motion_control/launch/: cmdmux_launch.py  motion_control_launch.py  odom_launch.py
cg_ws/src/motion_control/src/: cmd_mux.cpp  cmd_mux_main.cpp  cmd_mux_node.cpp  lateral_controller.cpp  longitudinal_controller.cpp  mobility_control_main.cpp  mobility_control_node.cpp  motion_control_main.cpp  motion_control_node.cpp  odom_main.cpp  odom_node.cpp  pid_controller.cpp  worksystem_control_main.cpp  worksystem_control_node.cpp
cg_ws/src/motion_control/test/: lateral_controller_test.cpp
cg_ws/src/planning/: CMakeLists.txt  package.xml
cg_ws/src/planning/config/: autograder_node_params.yaml  behavior_executive_params.yaml
cg_ws/src/planning/doc/: fsm.puml
cg_ws/src/planning/launch/: autograder_launch.py  planning_launch.py
cg_ws/src/planning/src/: autograder_main.cpp  autograder_node.cpp  autograder_node_BACKUP.cpp  behavior_executive_main.cpp  behavior_executive_node.cpp  common.cpp  exploration_planner.cpp  goal_planner.cpp  kinematic_planner.cpp  tool_planner.cpp  transport_planner.cpp  velocity_planner.cpp
cg_ws/src/planning/test/: README.md  common_test.cpp  exploration_planner_test.cpp  fsm_test.cpp  kinematic_planner_test.cpp  tool_planner_test.cpp  transport_planner_test.cpp  velocity_planner_test.cpp
cg_ws/src/rectify/: CMakeLists.txt  package.xml
cg_ws/src/rectify/src/: rectify_main.cpp  rectify_node.cpp
cg_ws/src/sensing/: CMakeLists.txt  package.xml
cg_ws/src/teleop/: CMakeLists.txt  package.xml
cg_ws/src/uwb_beacon_rtls/: CMakeLists.txt  package.xml  setup.py
cg_ws/src/uwb_rtls/: package.xml  setup.cfg  setup.py
(+820 files in other folders)
