<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>total_station</name>
  <version>0.0.0</version>
  <description>Total Station Real Time Localization System</description>
  <maintainer email="jharring@andrew.cmu.edu">root</maintainer>
  <license>TODO</license>

  <!-- Adding dependencies to build custom messages from .idl format -->
  <member_of_group>rosidl_interface_packages</member_of_group>
  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>cg_msgs</exec_depend>
  <exec_depend>python3-serial</exec_depend>

  <exec_depend>ros2launch</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
